# 2025_20687458

./: README.md  adder_8h.html  adder_8h_source.html  git-cheat-sheet.txt  hello.cpp  hi_and_date.cm  hi_and_date.cmd  index.html  test.txt
.github/workflows/: doxygen-deploy.yml
Worksheet3/: calc.cpp  libadder.exp
Worksheet3/adderdynamic/include/: adder.h
Worksheet3/adderdynamic/lib/: libadder.lib
Worksheet3/adderstatic/include/: adder.h
Worksheet3/adderstatic/lib/: libadder.lib
Worksheet4/Calc/: CMakeLists.txt  adder.h
Worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
Worksheet5/: Doxyfile  adder.h  calc.cpp
Worksheet6/WS6/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Worksheet7/Exercise3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.save-failed  mainwindow.ui
